<resources>
    <string name="app_name">SmartExpenseTracker@Zobaze</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="expense_report">Expense Report</string>
    <string name="expense_details">Expense Details</string>
    <string name="add_expense">Add Expense</string>
    <string name="amount">Amount</string>
    <string name="title">Title</string>
    <string name="optional_notes">Optional Notes</string>
    <string name="choose_from_gallery">Choose From Gallery</string>
    <string name="submit">Submit</string>
    <string name="title_required">Title Required</string>
    <string name="amount_required">Amount Required</string>
    <string name="amount_validate_ask">Enter a valid amount</string>
    <string name="category_select_ask">Select a valid category</string>
    <string name="select_date">Select Date</string>
    <string name="total_amount">Total Amount</string>
    <string name="total_items">Total Items</string>
    <string name="receipt_available">Receipt Available</string>
    <string name="expense_title">Expense Title</string>
    <string name="selected_image">Selected Image</string>
</resources>